<resources>
    <string name="app_name" translatable="false">Parada</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_report">New report</string>
    <string name="action_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_add_a_photo">Add a photo</string>
    <string name="action_edit_location">Edit location</string>
    <string name="action_my_location">My location</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bus_code">Bus code:</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_report">Report</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help_description">
        I cannot count how many times the bus did not stop to me, for a unknown
        number of reasons. It is a fact that you can call to a hotline and make
        a formal complain, but I know no person who do that.
        Parada was made to expose such problem. A simple and fast way to report
        when a bus drive leaves you at the bus stop, feeling like a piece of
        shit.
    </string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="facebook_app_id" translatable="false">1712982438977300</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1712982438977300</string>
    <string name="account">Account</string>
    <string name="send_feedback">Send feedback</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_help">Help</string>
    <string name="title">Title</string>
    <string name="sign_in">Sign in</string>
    <string name="privacy_policy">By signing in you agree to all the terms of service and privacy policy</string>
    <string name="help_hint">Give us your feedback about the app...</string>
    <string name="action_search">Search</string>
    <string name="skip">Skip</string>
    <string name="help">Help</string>
    <string name="no_reports">You have no reports.</string>
    <string name="no_account">I don\'t have an account</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="Cancel">Cancel</string>
    <!-- related to location -->
    <string name="gps_network_not_enabled">Please enable location from settings.</string>
    <string name="no_connection">No connection</string>
</resources>
