<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_48dp"
        android:orderInCategory="98"
        android:title="@string/action_sort"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_serach"
        android:icon="@drawable/ic_search_white_48dp"
        android:orderInCategory="99"
        android:title="@string/action_search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
